adding service code + heroku scripts
